vlib/v/checker/tests/anon_fn_missing_return_type.vv
fn main() {
	f := fn (i int) int { println(i) }
	f(0)
}
